[package]
name = "SimpleBeatmapAnalyzer"
version = "0.9.0"
edition = "2021"
authors = ["Raregendary <raregendary@gmail.com>"]
license = "MIT"
description = "Simple program to analyze all of your osu files and save a csv with all the computed metrics"
readme = "README.md"
homepage = "https://github.com/Raregendary/SimpleBeatmapAnalyzer"
repository = "https://github.com/Raregendary/SimpleBeatmapAnalyzer"
keywords = ["osu", "streams", "pp", "stars"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = "fat"
#panic = 'abort'
#opt-level=3
#overflow-checks = false

[dependencies]
csv = "1.2.2"
indicatif = "0.17.6"
jwalk = "0.8.1"
md-5 = "0.10.5"
rayon = "1.7.0"
rosu-pp = "0.9.5"
serde = { version = "1.0.188", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.2"
[build-dependencies]
winres = "0.1.12"
